--- a/index.css
+++ b/index.css
@@ -23,9 +23,9 @@ li {
     padding: 12px;
 }
 
-.nav__home {
+/* .nav__home {
     background-image: ;
-}
+} */
 
 .nav__row {
     margin: 0 auto;
@@ -55,6 +55,77 @@ li {
     border-radius: 50px;
 }
 
-.nav__link--home {
+/* .nav__link--home {
     
+} */
+
+/* ====================    LANDING PAGE     ==================== */
+
+#landing {
+    height: calc(100vh - 94px);
+    padding: 10px 20px 0;
+}
+
+.row {
+    height: 100%;
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+.wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heading {
+    width: 730px;
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.subheading {
+    width: 730px;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.browse {
+    display: flex;
+    justify-content: space-between;
+}
+
+.search-bar {
+    width: 500px;
+    height: 70px;
+    font-size: 24px;
+    padding: 0 25px;
+    border-radius: 24px;
+}
+
+.search-btn {
+    width: 150px;
+    height: 70px;
+    border-radius: 24px;
+    border: none;
+    font-size: 40px;
+    color: #fff;
+    background-color: #e91515;
+    margin-left: 20px;
+}
+
+.home-img {
+    width: 100%;
+    max-width: 600px;
+    margin-bottom: 75px;
 }
